variables, loops and node.js added

--- a/public/home.html
+++ b/public/home.html
@@ -11,7 +11,7 @@
 
     <div class="content">
             <h1>Welcome to My Website</h1>
-            <p>This is the main content of the page, which will appear to the right of the sidebar.</p>
+            <p>Info about the page and it's contents.</p>
     </div>
 
     <script type="module" src="sidebar.js"></script>
