crud demo added

--- a/public/loops.html
+++ b/public/loops.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="/style/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/stylesheet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <div class="sidebar" id="sidebar"></div>
 
  
-    <div class="content">
+    <main class="content">
         <h1>Array loop methods in JavaScript</h1>
     
         <p>JavaScript provides various loop methods to work with arrays. Below you will see some of those and examples of how to use them. These are just some of the
@@ -106,7 +106,7 @@
             console.log(fruits); // Outputs ['apple', 'banana', 'cherry', 'date']
             </code>
         </pre>
-    </div>
+    </main>
     <script type="module" src="sidebar.js"></script>
 </body>
 </html>
