--- a/public/home.html
+++ b/public/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style/stylesheet.css">
+    <link rel="stylesheet" href="assets/css/stylesheet.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandatory I</title>
@@ -9,10 +9,10 @@
 <body>
     <div class="sidebar" id="sidebar"></div>
 
-    <div class="content">
+    <main class="content">
             <h1>Welcome to My Website</h1>
             <p>Info about the page and it's contents.</p>
-    </div>
+    </main>
 
     <script type="module" src="sidebar.js"></script>
 </body>
