--- a/public/node.html
+++ b/public/node.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="/style/stylesheet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
+  <head>
+    <link rel="stylesheet" href="assets/css/stylesheet.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Node.js and express</title>
-</head>
-<body>
-
-
+  </head>
+  <body>
     <div class="sidebar" id="sidebar"></div>
 
- 
-    <div class="content">
-        <hr>
-        <h1>Node.js</h1>
-        <hr>
-        <p>Node.js is an open-source runtime enviroment that makes it possible to execute JS outside a webbrowser.
-            In this project it is used for the server side. It gives access to a variety of libraries and packages through npm (node package manager).
-            <br>
-            As with other package managers such as maven or graddle, npm handles dependencies. An important part of Node.js projects is the package.json file. It contains metadata about the project and its dependecies.
-            <br>
-            Below is a simple example of this with express listed as a dependency. The needed libaries can be installed easily using npm in the terminal.
-        </p>
+    <main class="content">
+      <hr />
+      <h1>Node.js</h1>
+      <hr />
+      <p>
+        Node.js is an open-source runtime enviroment that makes it possible to
+        execute JS outside a webbrowser. In this project it is used for the
+        server side. It gives access to a variety of libraries and packages
+        through npm (node package manager).
+        <br />
+        As with other package managers such as maven or graddle, npm handles
+        dependencies. An important part of Node.js projects is the package.json
+        file. It contains metadata about the project and its dependecies.
+        <br />
+        Below is a simple example of this with express listed as a dependency.
+        The needed libaries can be installed easily using npm in the terminal.
+      </p>
 
-        
-    <pre class="pre">
+      <pre class="pre">
         <code class="javascript">
             {
                 "dependencies": {
@@ -36,9 +38,8 @@
             }
         </code>
         </pre>
-        <p> Below are the commands needed to install express.
-        </p>
-        <pre class="pre">
+      <p>Below are the commands needed to install express.</p>
+      <pre class="pre">
             <code class="javascript">
                 // Examples of commands to use in the terminal
                 $ npm i express
@@ -46,21 +47,43 @@
                 $ npm install express
             </code>
             </pre>
-        <p>Installing this will create the package-lock.json file that manages dependencies. It ensures that dependency management is reliable and consistent by:</p>
-        <ul>
-            <li>Dependency version locking: Locks too specific versions of all packages. That ensures you get the exact same versions each time you or someone else install so that there are no unexpected updates or changes.</li>
-            <li>Dependency tree: Shows how different packages depend on eachoter.</li>
-            <li>Reproducibility: Makes it reproducable over different enviroments and installations. This gives a consistent development and deployment process.</li>
-        </ul>
-        <br>
-        <p>As mentioned earlier the package.json can hold other metadata about the project besides the dependencies. These can be added from the terminal with the command below.</p>
-        <pre class="pre">
+      <p>
+        Installing this will create the package-lock.json file that manages
+        dependencies. It ensures that dependency management is reliable and
+        consistent by:
+      </p>
+      <ul>
+        <li>
+          Dependency version locking: Locks too specific versions of all
+          packages. That ensures you get the exact same versions each time you
+          or someone else install so that there are no unexpected updates or
+          changes.
+        </li>
+        <li>
+          Dependency tree: Shows how different packages depend on eachoter.
+        </li>
+        <li>
+          Reproducibility: Makes it reproducable over different enviroments and
+          installations. This gives a consistent development and deployment
+          process.
+        </li>
+      </ul>
+      <br />
+      <p>
+        As mentioned earlier the package.json can hold other metadata about the
+        project besides the dependencies. These can be added from the terminal
+        with the command below.
+      </p>
+      <pre class="pre">
             <code class="javascript">
                 $ npm init
             </code>
         </pre>
-        <p>This will give you the option to add additional info about the project. Se below for example.</p>
-        <pre class="pre">
+      <p>
+        This will give you the option to add additional info about the project.
+        Se below for example.
+      </p>
+      <pre class="pre">
             <code class="javascript">
                 {
                     "dependencies": {
@@ -97,16 +120,23 @@
             </code>
         </pre>
 
-        <p>As you see there are several details added to the package above. A detail worth of notice that was added manually is type. By default it is CommonJS but here it is set to module.
-            This affects how how you import and export code from other files and also how it is loaded.
-        </p>
-        <ul>
-            <li>CommonJS uses require and module.exports.</li>
-            <li>Modules (ES6) uses import/export.</li>
-        </ul>
-        <p>CommonJS is often used serverside whereas Modules is used both server and clientside. Using modules can help make the code better organized and more efficient.</p>
+      <p>
+        As you see there are several details added to the package above. A
+        detail worth of notice that was added manually is type. By default it is
+        CommonJS but here it is set to module. This affects how how you import
+        and export code from other files and also how it is loaded.
+      </p>
+      <ul>
+        <li>CommonJS uses require and module.exports.</li>
+        <li>Modules (ES6) uses import/export.</li>
+      </ul>
+      <p>
+        CommonJS is often used serverside whereas Modules is used both server
+        and clientside. Using modules can help make the code better organized
+        and more efficient.
+      </p>
 
-        <pre class="pre">
+      <pre class="pre">
             <code class="javascript">
                 // Example of import using Modules
                 import { getExampleObject } from "./objectCreator.js";
@@ -135,32 +165,51 @@
 
             </code>
         </pre>
-        <br>
-        <h2>Nodemon</h2>
-        <p>Nodemon is a utility for Node.js applications that automatically monitors changes in your project files and restarts your server when changes are detected. 
-            It simplifies the development process so that you don't need to manually stop and restart your application each time you make code changes.
-            <br>
-            Below you can see the command to install it.
-        </p>
-        <pre class="pre">
+      <br />
+      <h2>Nodemon</h2>
+      <p>
+        Nodemon is a utility for Node.js applications that automatically
+        monitors changes in your project files and restarts your server when
+        changes are detected. It simplifies the development process so that you
+        don't need to manually stop and restart your application each time you
+        make code changes.
+        <br />
+        Below you can see the command to install it.
+      </p>
+      <pre class="pre">
             <code class="javascript">
                 $ npm install -g nodemon
             </code>
             </pre>
-            <p>There are some pros and cons to consider when using it.</p>
-            <ul>
-                <li>Pros:</li>
-                <ul>
-                  <li>Automatic Restart: Nodemon automatically restarts your application when code changes reducing downtime during development.</li>
-                  <li>Improved Productivity: It streamlines the development process so that you don't need to manually stop and restart the server after code modifications.</li>
-                </ul>
-                <li>Cons:</li>
-                <ul>
-                  <li>Resource Intensive: Nodemon continuously watches for file changes which can consume system resources. For small projects this shouldn't be an issue.</li>
-                  <li>Not Suitable for All Scenarios: While Nodemon is excellent for development it may not be suitable for production environments where code changes should be carefully controlled.</li>
-                </ul>
-              </ul>
-    </div>
+      <p>There are some pros and cons to consider when using it.</p>
+      <ul>
+        <li>Pros:</li>
+        <ul>
+          <li>
+            Automatic Restart: Nodemon automatically restarts your application
+            when code changes reducing downtime during development.
+          </li>
+          <li>
+            Improved Productivity: It streamlines the development process so
+            that you don't need to manually stop and restart the server after
+            code modifications.
+          </li>
+        </ul>
+        <li>Cons:</li>
+        <ul>
+          <li>
+            Resource Intensive: Nodemon continuously watches for file changes
+            which can consume system resources. For small projects this
+            shouldn't be an issue.
+          </li>
+          <li>
+            Not Suitable for All Scenarios: While Nodemon is excellent for
+            development it may not be suitable for production environments where
+            code changes should be carefully controlled.
+          </li>
+        </ul>
+      </ul>
+    </main>
     <script type="module" src="sidebar.js"></script>
-</body>
+  </body>
 </html>
