--- a/public/restAPI.html
+++ b/public/restAPI.html
@@ -1,86 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/stylesheet.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/stylesheet.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
     <title>REST API and express</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="sidebar" id="sidebar"></div>
-    <div class="content">
-        <hr>
-        <h1>REST API and Express</h1>
-        <hr>
-        <p>For this project I have set up a REST API and used to Express along with Node.js to simplify and streamline it.
-        </p>
-        <br>
-        <h2>REST API</h2>
-        <p> A REST API (Representational State Transfer Application Programming Interface) is a set of rules and conventions for building and interacting with web services.
-            It uses standard HTTP methods like GET, POST, PUT, DELETE to perform actions on resources.
-            REST APIs enable communication between different applications over the internet allowing them to request and exchange data in a consistent and predictable manner. 
-            REST APIs are commonly used for web application development providing a way to get, create, update, and delete (CRUD) data on remote servers.
-            <br>
-            There are two important conventions to following when designing a REST API.
-        </p>
-            <ol>
-                <li>Ordering of HTTP methods</li>
-                <li>Endpoints should reflect the underlying collections</li>
-            </ol>
-            <p>Example:</p>
-            <table>
-                <thead>
-                    <tr>
-                        <th>HTTP method</th>
-                        <th>Endpoint</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td>GET</td>
-                    <td>/movies</td>
-                </tr>
+    <main class="content">
+      <hr />
+      <h1>REST API and Express</h1>
+      <hr />
+      <p>
+        For this project I have set up a REST API and used to Express along with
+        Node.js to simplify and streamline it.
+      </p>
+      <br />
+      <h2>REST API</h2>
+      <p>
+        A REST API (Representational State Transfer Application Programming
+        Interface) is a set of rules and conventions for building and
+        interacting with web services. It uses standard HTTP methods like GET,
+        POST, PUT, DELETE to perform actions on resources. REST APIs enable
+        communication between different applications over the internet allowing
+        them to request and exchange data in a consistent and predictable
+        manner. REST APIs are commonly used for web application development
+        providing a way to get, create, update, and delete (CRUD) data on remote
+        servers.
+        <br />
+        There are two important conventions to following when designing a REST
+        API.
+      </p>
+      <ol>
+        <li>Ordering of HTTP methods</li>
+        <li>Endpoints should reflect the underlying collections</li>
+      </ol>
+      <p>Example:</p>
+      <table>
+        <thead>
+          <tr>
+            <th>HTTP method</th>
+            <th>Endpoint</th>
+          </tr>
+        </thead>
+        <tr>
+          <td>GET</td>
+          <td>/movies</td>
+        </tr>
 
-                <tr>
-                    <td>GET</td>
-                    <td>/movies/{id}</td>
-                </tr>
-                <tr>
-                    <td>POST</td>
-                    <td>/movies</td>
-                </tr>
-                <tr>
-                    <td>PATCH</td>
-                    <td>/movies/{id}</td>
-                </tr>
-                <tr>
-                    <td>PUT</td>
-                    <td>/movies/{id}</td>
-                </tr>
-                <tr>
-                    <td>DELETE</td>
-                    <td>/movies/{id}</td>
-                </tr>
-            </table>
-            <p>Here the different endpoints all refer to a collection server side. Because it is a collection it is assumed that there are
-                multiple objects it movie in plural. When referencing a specific object an id, name or some other unique property of the object
-                is needed to find and identify it so that it can be handled properly according to specific endpoint that is called.
-            </p>
-        <br>
-        <h2>Express</h2>
-        <p>Express.js is a web application framework with Node.js in the development of web applications and APIs. In the project I use for:
-        </p>
-        <ul>
-            <li>Routing: Easy definition of routes for handling different HTTP requests.</li>
-            <li>Middleware: Integration of middleware functions for tasks like data parsing and authentication.</li>
-            <li>Port Handling: Management of server ports for listening to incoming requests.</li>
-            <li>Static File Serving: Efficient serving of static files like HTML, CSS, and JavaScript.</li>
-            <li>JSON Parsing: Built-in support for handling JSON data.</li>
-        </ul>
-        <p>
-            <strong>Example of CRUD:</strong> Below is an example of full CRUD REST API I made for this project.
-        </p>
-        <pre class="pre">
+        <tr>
+          <td>GET</td>
+          <td>/movies/{id}</td>
+        </tr>
+        <tr>
+          <td>POST</td>
+          <td>/movies</td>
+        </tr>
+        <tr>
+          <td>PATCH</td>
+          <td>/movies/{id}</td>
+        </tr>
+        <tr>
+          <td>PUT</td>
+          <td>/movies/{id}</td>
+        </tr>
+        <tr>
+          <td>DELETE</td>
+          <td>/movies/{id}</td>
+        </tr>
+      </table>
+      <p>
+        Here the different endpoints all refer to a collection server side.
+        Because it is a collection it is assumed that there are multiple objects
+        it movie in plural. When referencing a specific object an id, name or
+        some other unique property of the object is needed to find and identify
+        it so that it can be handled properly according to specific endpoint
+        that is called.
+      </p>
+      <br />
+      <h2>Express</h2>
+      <p>
+        Express.js is a web application framework with Node.js in the
+        development of web applications and APIs. In the project I use for:
+      </p>
+      <ul>
+        <li>
+          Routing: Easy definition of routes for handling different HTTP
+          requests.
+        </li>
+        <li>
+          Middleware: Integration of middleware functions for tasks like data
+          parsing and authentication.
+        </li>
+        <li>
+          Port Handling: Management of server ports for listening to incoming
+          requests.
+        </li>
+        <li>
+          Static File Serving: Efficient serving of static files like HTML, CSS,
+          and JavaScript.
+        </li>
+        <li>JSON Parsing: Built-in support for handling JSON data.</li>
+      </ul>
+      <p>
+        <strong>Example of CRUD:</strong> Below is an example of full CRUD REST
+        API I made for this project.
+      </p>
+      <pre class="pre">
             <code class="javascript">
 
                 app.get("/movies", (req, res) => {
@@ -129,18 +157,70 @@
                   });
             </code>
             </pre>
-            <p>As you can see it use the conventions mentioned earlier and handles errors that may occur during or with the correspondance.</p>
-    <table>
+      <p>
+        As you can see it use the conventions mentioned earlier and handles
+        errors that may occur during or with the correspondance.
+      </p>
+
+      <br />
+      <h2>Try the CRUD:</h2>
+      <p>
+        Below is a table using the GET /movies endpoint. The list (array) with
+        movies is fetched and put into a table.
+      </p>
+      <table>
         <thead>
-            <tr>
-                <th>Movie name</th>
-                <th>Production year</th>
-            </tr>
+          <tr>
+            <th>Movie name</th>
+            <th>Genre</th>
+            <th>Production year</th>
+          </tr>
         </thead>
-    <tbody id="table"></tbody>
-    </table>
-    </div>
-    <script type="module" src="sidebar.js"></script>
-    <script type="module" src="fetch.js"></script>
-</body>
+        <tbody id="table"></tbody>
+      </table>
+      <br />
+      <p>
+        <strong>GET: </strong>Here you can use the input field to fetch from the
+        GET /movies/{name} endpoint. It is set up to search by name of the movie
+        on the list of movies. It could also have been ID it makes a bit more
+        sense to search movies by name than som random generated ID.
+      </p>
+      <input id="getMovie" type="text" />
+      <br />
+      <button id="getMovieBtn">Get movie data</button>
+      <div id="fetchedMovie"></div>
+      <br />
+      <p>
+        <strong>POST: </strong>Below you can add a new movie to the list by
+        sending request to POST /movies. Just enter the input fields. When the
+        request has been handled susccesfully, the table containing all movies
+        on the list will be updated.
+      </p>
+      <input type="text" id="postName" placeholder="Name of new movie"/>
+      <br />
+      <input type="text" id="postGenre" placeholder="Genre of new movie"/>
+      <br />
+      <input type="number" id="postProdYear" placeholder="Production year of new movie"/>
+      <br />
+      <button id="postMovieBtn">Post new movie</button>
+
+      <p>
+        <strong>PATCH: </strong>Below you can get an existing movie by the name by typing it in the name field and clicking the "get movie data" button. From there you get all the data on the movie and can change (update) it as you like (except id). After clicking the "Update movie" button you can see the changes in the table further up.
+        It uses the PATCH /movies/{id} endpoint.
+      </p>
+      <strong>Id: </strong>
+      <p id="movieId"></p>
+      <input type="text" id="patchName" placeholder="Name of movie"/>
+      <button id="getPatchMovieBtn">Get movie data</button>
+      <br />
+      <input type="text" id="patchGenre" placeholder="Genre of movie"/>
+      <br />
+      <input type="number" id="patchProdYear" placeholder="Production year of movie"/>
+      <br />
+      <button id="patchMovieBtn">Update movie</button>
+      <p id="response-message"></p>
+    </main>
+    <script src="sidebar.js"></script>
+    <script  src="restAPI.js"></script>
+  </body>
 </html>
