project sorted to folders

--- a/public/datatypes/datatypes.html
+++ b/public/datatypes/datatypes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/style/stylesheet.css" />
+    <link rel="stylesheet" href="../assets/css/stylesheet.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css"
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Data types</title>
+    <title>Mandatory I</title>
   </head>
   <body>
     <div class="sidebar" id="sidebar"></div>
@@ -55,7 +55,7 @@
         Instead you should use const when possible and let when it is necessary
         to change the value of a variable during execution of the program.
       </p>
-
+      <br />
       <h2>Primitive Data Types</h2>
       <p>
         <strong>1. String:</strong> Represents text characters and is enclosed
@@ -170,6 +170,6 @@ const currentDate = new Date();
     </pre>
     </main>
 
-    <script type="module" src="sidebar.js"></script>
+    <script src="/assets/js/sidebar.js"></script>
   </body>
 </html>
