--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="assets/css/stylesheet.css" />
+    <link rel="stylesheet" href="../assets/css/stylesheet.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandatory I</title>
@@ -14,6 +14,6 @@
             <p>Info about the page and it's contents.</p>
     </main>
 
-    <script type="module" src="sidebar.js"></script>
+    <script src="/assets/js/sidebar.js"></script>
 </body>
 </html>
