--- a/public/loops/loops.html
+++ b/public/loops/loops.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="assets/css/stylesheet.css" />
+    <link rel="stylesheet" href="../assets/css/stylesheet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mandatory I</title>
 </head>
 <body>
 
@@ -14,7 +14,9 @@
 
  
     <main class="content">
+        <hr>
         <h1>Array loop methods in JavaScript</h1>
+        <hr>
     
         <p>JavaScript provides various loop methods to work with arrays. Below you will see some of those and examples of how to use them. These are just some of the
             loop methods there are in the JavaScript toolbox.
@@ -107,6 +109,6 @@
             </code>
         </pre>
     </main>
-    <script type="module" src="sidebar.js"></script>
+    <script src="/assets/js/sidebar.js"></script>
 </body>
 </html>
