--- a/public/node/node.html
+++ b/public/node/node.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="assets/css/stylesheet.css" />
+    <link rel="stylesheet" href="../assets/css/stylesheet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Node.js and express</title>
+    <title>Mandatory I</title>
   </head>
   <body>
     <div class="sidebar" id="sidebar"></div>
@@ -210,6 +210,6 @@
         </ul>
       </ul>
     </main>
-    <script type="module" src="sidebar.js"></script>
+    <script src="/assets/js/sidebar.js"></script>
   </body>
 </html>
