style changed, dummy login done, functions done

--- a/public/admin/adminpage.html
+++ b/public/admin/adminpage.html
@@ -14,7 +14,14 @@
       <hr />
       <h1>Adminpage</h1>
       <hr />
+      <div class="columns">
+        <div class="column">
         <p>You have successfully logged in to the dummy admin page.</p>
+      </div>
+      <div class="column">
+        <img src="../assets/images/construction.jpg" alt="" width="360" height="360">
+      </div>
+      </div>
     </main>
 
     <script src="/assets/js/sidebar.js"></script>
