--- a/public/fetch/fetch.html
+++ b/public/fetch/fetch.html
@@ -20,7 +20,7 @@
       <hr />
 
       <p>
-        In JavaScript "fetch" is a function used to make network requests to
+        In JavaScript fetch is a function used to make network requests to
         retrieve data from an URL. It is typically used for fetching data from a
         web server. It returns a promise that resolves to a response mathcing
         the response to the request. This makes it possible to work with data
