--- a/public/home/home.html
+++ b/public/home/home.html
@@ -19,19 +19,27 @@
         development with Node.js at KEA Computer Science 4th semester.
         <br />
         <br />
-        <strong>Purpose of assignment: </strong>
       </p>
+      <div class="columns">
+        <div class="column">
+          <p><strong>Purpose of assignment: </strong></p>
       <ul>
         <li>Catalogue of what we've learned so far.</li>
         <li>Practical implementation of the above.</li>
       </ul>
       <br />
-      <p>Both client and serverside is built with Javascript.</p>
+      <p><strong>Both client and serverside is built with JavaScript.</strong></p>
       <ul>
         <li>Server side with Node.js using Express.</li>
         <li>Client side of course using HTML and CSS.</li>
         <li>No database is included in this assignment.</li>
+        <li>Dummy admin login for further development.</li>
       </ul>
+      </div>
+      <div class="column">
+        <img src="../assets/images/KEA_logo_DK_Web.jpg" alt="">
+        </div>
+        </div>
       <br />
       <p>In the navbar you will find the pages with different topics addressed in this assignment.</p>
     </main>
