--- a/public/loops/loops.html
+++ b/public/loops/loops.html
@@ -19,7 +19,7 @@
         <hr>
     
         <p>JavaScript provides various loop methods to work with arrays. Below you will see some of those and examples of how to use them. These are just some of the
-            loop methods there are in the JavaScript toolbox.
+            loop methods there are availible in the JavaScript toolbox.
             <br>
             Almost all of them have specific functionality except for forEach. There is no build in iteration code and you have to input that yourself.
             That makes it more prone to error. With other loop methods the intent is explicit due to the naming which makes it eaiser to read.
