--- a/public/node/node.html
+++ b/public/node/node.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="../assets/css/stylesheet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,8 +20,8 @@
       <hr />
       <p>
         Node.js is an open-source runtime enviroment that makes it possible to
-        execute JS outside a webbrowser. In this project it is used for the
-        server side. It gives access to a variety of libraries and packages
+        execute JavaScript outside a webbrowser. In this project it is used for
+        the server side. It gives access to a variety of libraries and packages
         through npm (node package manager).
         <br />
         As with other package managers such as maven or graddle, npm handles
@@ -38,7 +41,11 @@
             }
         </code>
         </pre>
-      <p>Below are the commands needed to install express.</p>
+      <p>
+        Below are the commands needed to install express. Simliar dependencies
+        can be installed the same way by just switching express with the name of
+        needed dependency. That will install the newest version.
+      </p>
       <pre class="pre">
             <code class="javascript">
                 // Examples of commands to use in the terminal
@@ -186,11 +193,11 @@
         <li>Pros:</li>
         <ul>
           <li>
-            Automatic Restart: Nodemon automatically restarts your application
+            Automatic restart: Nodemon automatically restarts your application
             when code changes reducing downtime during development.
           </li>
           <li>
-            Improved Productivity: It streamlines the development process so
+            Improved productivity: It streamlines the development process so
             that you don't need to manually stop and restart the server after
             code modifications.
           </li>
@@ -198,12 +205,12 @@
         <li>Cons:</li>
         <ul>
           <li>
-            Resource Intensive: Nodemon continuously watches for file changes
+            Resource intensive: Nodemon continuously watches for file changes
             which can consume system resources. For small projects this
             shouldn't be an issue.
           </li>
           <li>
-            Not Suitable for All Scenarios: While Nodemon is excellent for
+            Not suitable for all scenarios: While Nodemon is good for
             development it may not be suitable for production environments where
             code changes should be carefully controlled.
           </li>
