--- a/public/node/node.html
+++ b/public/node/node.html
@@ -20,9 +20,8 @@
       <hr />
       <p>
         Node.js is an open-source runtime enviroment that makes it possible to
-        execute JavaScript outside a webbrowser. In this project it is used for
-        the server side. It gives access to a variety of libraries and packages
-        through npm (node package manager).
+        execute JavaScript outside a webbrowser. It gives access to a variety of
+        libraries and packages through npm (node package manager).
         <br />
         As with other package managers such as maven or graddle, npm handles
         dependencies. An important part of Node.js projects is the package.json
