--- a/public/pages/restAPI/restAPI.html
+++ b/public/pages/restAPI/restAPI.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/stylesheet.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-    <title>Mandatory I</title>
-  </head>
-  <body>
-    <div class="sidebar" id="sidebar"></div>
     <main class="content">
       <hr />
       <h1>REST API and Express</h1>
@@ -256,7 +245,7 @@
       <p>
         <hr>
         <strong>DELETE: </strong>Below you can delete movies bu inputting the name 
-        of the movie.It uses the endport PATCH /movies/{name}. As before the table 
+        of the movie.It uses the endpoint PATCH /movies/{name}. As before the table 
         updates when the movie is deleted.
       </p>
       <input type="text" id="deleteMovie">
@@ -266,7 +255,8 @@
       <br />
       <hr>
     </main>
-    <script src="/assets/js/sidebar.js"></script>
+    <script src="../../assets/js/hightLight.js"></script>
     <script type="module" src="restAPI.js"></script>
+
   </body>
 </html>
