--- a/public/pages/functions/functions.html
+++ b/public/pages/functions/functions.html
@@ -1,15 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="../assets/css/stylesheet.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mandatory I</title>
-  </head>
-  <body>
-    <div class="sidebar" id="sidebar"></div>
-
     <main class="content">
       <hr />
       <h1>Functions</h1>
@@ -94,20 +82,7 @@
                 const result = performOperation(5, doubleValue);
             </code>
         </pre>
-
-      <pre class="pre">
-            <code class="javascript">
-
-            </code>
-        </pre>
-
-      <pre class="pre">
-            <code class="javascript">
-
-            </code>
-        </pre>
     </main>
-
-    <script src="/assets/js/sidebar.js"></script>
+    <script src="../../assets/js/hightLight.js"></script>
   </body>
 </html>
