--- a/public/pages/loops/loops.html
+++ b/public/pages/loops/loops.html
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <link rel="stylesheet" href="../assets/css/stylesheet.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mandatory I</title>
-</head>
-<body>
 
-    <div class="sidebar" id="sidebar"></div>
-
- 
     <main class="content">
         <hr>
         <h1>Array loop methods in JavaScript</h1>
@@ -109,6 +95,6 @@
             </code>
         </pre>
     </main>
-    <script src="/assets/js/sidebar.js"></script>
+    <script src="../../assets/js/hightLight.js"></script>
 </body>
 </html>
