added to node and restAPI

--- a/public/pages/SSR/ssr.html
+++ b/public/pages/SSR/ssr.html
@@ -29,14 +29,14 @@
     </p>
     <ul>
         <li>
-            Instant Content for Crawlers: SSR delivers 
+            Instant content for crawlers: SSR delivers 
             fully rendered HTML to search 
             engines upfront making quicker and more 
             accurate indexing compared to CSR.
         </li>
         <li>
-            Efficient Crawling: SSRs server-generated 
-            HTML allows web crawlers to swiftly analyze 
+            Efficient crawling: SSRs server-generated 
+            HTML allows web crawlers to quickly analyze 
             and index content. This enhances SEO by providing 
             a more efficient crawling process.
         </li>
