--- a/public/pages/restAPI/restAPI.html
+++ b/public/pages/restAPI/restAPI.html
@@ -256,7 +256,7 @@
       <hr>
     </main>
     <script src="../../assets/js/hightLight.js"></script>
-    <script type="module" src="restAPI.js"></script>
+    <script type="module" src="/pages/restAPI/restAPI.js"></script>
 
   </body>
 </html>
