--- a/public/pages/restAPI/restAPI.html
+++ b/public/pages/restAPI/restAPI.html
@@ -20,7 +20,7 @@
         servers.
         <br />
         There are two important conventions to following when designing a REST
-        API.
+        API:
       </p>
       <ol>
         <li>Ordering of HTTP methods</li>
@@ -85,7 +85,9 @@
         </li>
         <li>
           Static File Serving: Efficient serving of static files like HTML, CSS,
-          and JavaScript.
+          and JavaScript. It is an Important security measure. It makes sure to only 
+          give access to intented files and prevents unauthorized access to static 
+          files in public folder.
         </li>
         <li>JSON Parsing: Built-in support for handling JSON data.</li>
       </ul>
