--- a/public/pages/xss/xss.html
+++ b/public/pages/xss/xss.html
@@ -1,6 +1,6 @@
     <main class="content">
       <hr />
-      <h1>Welcome to my website</h1>
+      <h1>Cross-site scripting</h1>
       <hr />
       <p>
         Cross-Site Scripting (XSS) is a security vulnerability that untrusted
